--- a/config/supervisor.conf
+++ b/config/supervisor.conf
@@ -12,6 +12,7 @@ minfds=1024                                     ; number of startup file descrip
 minprocs=200                                    ; number of process descriptors
 user=root                                       ; default user
 childlogdir=/var/log/kujon.mobi/                ; where child log files will live
+environment=PYTHONPATH='/opt/kujon.mobi/current'; 
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
