--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -34,7 +34,7 @@ minprocs=200                 ; (min. avail process descriptors;default 200)
 ;nocleanup=true              ; (don't clean up tempfiles at start;default false)
 childlogdir=/var/log/kujon.mobi/         ; ('AUTO' child log dir, default $TEMP)
 ;environment=KEY="value"     ; (key value pairs to add to environment)
-environment=PYTHONPATH='/opt/kujon.mobi/current'; 
+environment=PYTHONPATH='/home/appuser/kujon.mobi/current';
 ;strip_ansi=false            ; (strip ansi escape codes in logs; def. false)
 
 ; the below section must remain in the config file for RPC
