--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,5 +1,4 @@
 worker_processes 2;
-
 error_log /var/log/nginx/error.log;
 pid /var/run/nginx.pid;
 
@@ -17,8 +16,12 @@ http {
         server 127.0.0.1:8003;
     }
 
+    upstream kujon-api {
+        server 127.0.0.1:8000;
+        server 127.0.0.1:8001;
+    }
 
-    # include /path/to/nginx.mime.types;
+    include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
     access_log /var/log/nginx/access.log;
@@ -40,11 +43,30 @@ http {
     # to all frontends)
     proxy_next_upstream error;
 
+    server_tokens off;
+    ssl_session_cache   shared:SSL:10m;
+    ssl_session_timeout 10m;
+    ssl_certificate      /etc/ssl/kujon.mobi.cert;
+    ssl_certificate_key  /etc/ssl/kujon.mobi.key;
+    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
+
     server {
-        listen 80;
+	listen 80 default_server;
+	listen [::]:80 default_server;
+	server_name kujon.mobi www.kujon.mobi;
+	return 301 https://$server_name$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+
+        server_tokens off;
+                
+        server_name kujon.mobi;
 
         location ^~ /static/ {
-            root /opt/kujon.mobi/current/web/;
+            root /home/appuser/kujon.mobi/current/web/;
             if ($query_string) {
                 expires max;
             }
@@ -56,7 +78,25 @@ http {
             proxy_redirect off;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Scheme $scheme;
-            proxy_pass http://kujon-web;
+            proxy_pass https://kujon-web;
         }
     }
+
+    server {
+        listen 443 ssl;
+
+        server_tokens off;
+
+        server_name api.kujon.mobi;
+
+        location / {
+            proxy_pass_header Server;
+            proxy_set_header Host $http_host;
+            proxy_redirect off;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Scheme $scheme;
+            proxy_pass https://kujon-api;
+        }
+    }
+
 }
