--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -7,6 +7,7 @@ events {
     use epoll;
 }
 
+
 http {
     charset utf-8;
 
@@ -46,9 +47,9 @@ http {
     server_tokens off;
     ssl_session_cache   shared:SSL:10m;
     ssl_session_timeout 10m;
-    ssl_certificate      /etc/ssl/kujon.mobi.cert;
+    ssl_certificate      /etc/ssl/kujon.mobi.withroot.cert;
     ssl_certificate_key  /etc/ssl/kujon.mobi.key;
-    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+        ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
     server {
@@ -98,5 +99,4 @@ http {
             proxy_pass https://kujon-api;
         }
     }
-
 }
