poprawki konfiguracji devel

--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -23,14 +23,14 @@ FACEBOOK_CLIENT_ID = 442437425952587
 FACEBOOK_CLIENT_SECRET = d380d5ecac943a54831ebefec22a86d9
 
 [deployment]
-SITE_DOMAIN = localhost
+SITE_DOMAIN = http://localhost
 API_PORT = 8881
-DEPLOY_API = localhost:8881
+DEPLOY_API = http://localhost:8881
 
 WEB_PORT = 8888
-DEPLOY_WEB = localhost:8888
-CALLBACK_URL = localhost:8881/authentication/verify
-LOGIN_URL = localhost:8888/#login
+DEPLOY_WEB = http://localhost:8888
+CALLBACK_URL = http://localhost:8881/authentication/verify
+LOGIN_URL = http://localhost:8888/#login
 
 [email]
 SMTP_HOST = smtp.gmail.com
