fix config support for empty values

--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -13,8 +13,8 @@ COMPRESS_RESPONSE = True
 UNICODE = UTF-8
 
 [proxy]
-PROXY_URL = None
-PROXY_PORT = None
+PROXY_URL =
+PROXY_PORT =
 
 [social]
 GOOGLE_CLIENT_ID = 915486095176-jpodd1tterj5o4vtgoh18o4hokl5k55a.apps.googleusercontent.com
@@ -39,5 +39,5 @@ SMTP_USER = smtp_user
 SMTP_PASSWORD = smtp_password
 
 [ssl]
-SSL_CERT = None
-SSL_KEY = None
+SSL_CERT =
+SSL_KEY =
