--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -13,8 +13,8 @@ COMPRESS_RESPONSE = True
 UNICODE = UTF-8
 
 [proxy]
-PROXY_URL = None
-PROXY_PORT = None
+PROXY_URL =
+PROXY_PORT =
 
 [social]
 GOOGLE_CLIENT_ID = 319981710775-ik1ik0ocslnk98efr2uk4gfgolnl7ep5.apps.googleusercontent.com
