--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -41,3 +41,6 @@ SMTP_PASSWORD = smtp_password
 [ssl]
 SSL_CERT = /etc/ssl/kujon.mobi.cert
 SSL_KEY = /etc/ssl/kujon.mobi.key
+
+[administration]
+LOG_DIR = /home/appuser/kujon.mobi/log/
