--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -74,7 +74,7 @@ http {
         }
 
         location / {
-            proxy_pass_header Server;
+            # proxy_pass_header Server;
             proxy_set_header Host $http_host;
             proxy_redirect off;
             proxy_set_header X-Real-IP $remote_addr;
@@ -91,7 +91,7 @@ http {
         server_name api.kujon.mobi;
 
         location / {
-            proxy_pass_header Server;
+            # proxy_pass_header Server;
             proxy_set_header Host $http_host;
             proxy_redirect off;
             proxy_set_header X-Real-IP $remote_addr;
