--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -1,5 +1,5 @@
 [database]
-MONGODB_URI = mongodb://admin:devel@localmongoinstance/
+MONGODB_URI = mongodb://localmongoinstance/kujon-dev
 MONGODB_NAME = kujon-dev
 
 [application]
@@ -13,8 +13,8 @@ COMPRESS_RESPONSE = True
 UNICODE = UTF-8
 
 [proxy]
-PROXY_URL = None
-PROXY_PORT = None
+PROXY_URL = http://web-proxy.houston.hp.com
+PROXY_PORT = 8080
 
 [social]
 GOOGLE_CLIENT_ID = 915486095176-jpodd1tterj5o4vtgoh18o4hokl5k55a.apps.googleusercontent.com
@@ -35,9 +35,12 @@ LOGIN_URL = http://localhost:8888/#login
 [email]
 SMTP_HOST = smtp.gmail.com
 SMTP_PORT = 587
-SMTP_USER = smtp_user
-SMTP_PASSWORD = smtp_password
+SMTP_USER = kujontest@gmail.com
+SMTP_PASSWORD = kujontest2016
 
 [ssl]
-SSL_CERT = None
-SSL_KEY = None
+SSL_CERT =
+SSL_KEY =
+
+[administration]
+LOG_DIR = C:\\tmp
