--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -13,7 +13,7 @@ COMPRESS_RESPONSE = True
 UNICODE = UTF-8
 
 [proxy]
-PROXY_URL = 
+PROXY_URL =
 PROXY_PORT =
 
 [social]
@@ -43,4 +43,4 @@ SSL_CERT =
 SSL_KEY =
 
 [administration]
-LOG_DIR = C:\\tmp
+LOG_DIR =
