fix configuraction for mail server

--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -33,10 +33,10 @@ CALLBACK_URL = http://localhost:8881/authentication/verify
 LOGIN_URL = http://localhost:8888/#login
 
 [email]
-SMTP_HOST = smtp.gmail.com
-SMTP_PORT = 587
-SMTP_USER = kujontest@gmail.com
-SMTP_PASSWORD = kujontest2016
+SMTP_HOST = toja.kujon.mobi
+SMTP_PORT = 25
+SMTP_USER = kujondev
+SMTP_PASSWORD = dkJshYhwbGSb3
 
 [ssl]
 SSL_CERT =
