--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -33,10 +33,10 @@ CALLBACK_URL = https://api.kujon.mobi/authentication/verify
 LOGIN_URL = https://kujon.mobi/#login
 
 [email]
-SMTP_HOST = smtp.gmail.com
-SMTP_PORT = 587
-SMTP_USER = smtp_user
-SMTP_PASSWORD = smtp_password
+SMTP_HOST = localhost
+SMTP_PORT = 25
+SMTP_USER = kujon
+SMTP_PASSWORD = dh31283hGteys334
 
 [ssl]
 SSL_CERT = /etc/ssl/kujon.mobi.cert
