--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -33,8 +33,8 @@ CALLBACK_URL = http://localhost:8881/authentication/verify
 LOGIN_URL = http://localhost:8888/#login
 
 [email]
-SMTP_HOST = toja.kujon.mobi
-SMTP_PORT = 25
+SMTP_HOST = localhost
+SMTP_PORT = 8825
 SMTP_USER = kujondev
 SMTP_PASSWORD = dkJshYhwbGSb3
 
