fix email configuration

--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -35,8 +35,9 @@ LOGIN_URL = http://localhost:8888/#login
 [email]
 SMTP_HOST = localhost
 SMTP_PORT = 8825
-SMTP_USER = kujondev
-SMTP_PASSWORD = dkJshYhwbGSb3
+SMTP_USER = kujon
+SMTP_EMAIL = kujon@kujon.mobi
+SMTP_PASSWORD = dh31283hGteys334
 
 [ssl]
 SSL_CERT =
