--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -36,6 +36,7 @@ LOGIN_URL = https://kujon.mobi/#login
 SMTP_HOST = localhost
 SMTP_PORT = 25
 SMTP_USER = kujon
+SMTP_EMAIL = kujon@kujon.mobi
 SMTP_PASSWORD = dh31283hGteys334
 
 [ssl]
