--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -23,6 +23,8 @@ FACEBOOK_CLIENT_ID = 442437425952587
 FACEBOOK_CLIENT_SECRET = d380d5ecac943a54831ebefec22a86d9
 
 [deployment]
+WEB_VERSION = v0.5
+
 SITE_DOMAIN = http://localhost
 API_PORT = 8881
 DEPLOY_API = http://localhost:8881
