--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -23,6 +23,8 @@ FACEBOOK_CLIENT_ID = 435328606663469
 FACEBOOK_CLIENT_SECRET = 3f2e953dbfebc98a2ea2fc888266f1c4
 
 [deployment]
+WEB_VERSION = v0.5
+
 SITE_DOMAIN = https://kujon.mobi
 API_PORT = 8881
 DEPLOY_API = https://api.kujon.mobi
