--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -13,8 +13,8 @@ COMPRESS_RESPONSE = True
 UNICODE = UTF-8
 
 [proxy]
-PROXY_URL =
-PROXY_PORT =
+PROXY_URL = web-proxy.houston.hp.com
+PROXY_PORT = 8080
 
 [social]
 GOOGLE_CLIENT_ID = 915486095176-jpodd1tterj5o4vtgoh18o4hokl5k55a.apps.googleusercontent.com
