--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -7,7 +7,6 @@ events {
     use epoll;
 }
 
-
 http {
     charset utf-8;
 
@@ -53,17 +52,14 @@ http {
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
     server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
-	server_name kujon.mobi www.kujon.mobi;
-	return 301 https://$server_name$request_uri;
+	    listen 80;
+	    server_name _;
+	    rewrite ^ https://$host$request_uri? permanent;
     }
 
     server {
         listen 443 ssl;
-
         server_tokens off;
-                
         server_name kujon.mobi;
 
         location ^~ /static/ {
@@ -85,9 +81,7 @@ http {
 
     server {
         listen 443 ssl;
-
         server_tokens off;
-
         server_name api.kujon.mobi;
 
         location / {
@@ -96,7 +90,7 @@ http {
             proxy_redirect off;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Scheme $scheme;
-            proxy_pass https://kujon-api;
+            proxy_pass https://api.kujon-api;
         }
     }
 }
