ssh api redirect fix

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -49,21 +49,18 @@ http {
     ssl_session_timeout 10m;
     ssl_certificate      /etc/ssl/kujon.mobi.withroot.cert;
     ssl_certificate_key  /etc/ssl/kujon.mobi.key;
-        ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
     server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
-	server_name kujon.mobi www.kujon.mobi;
-	return 301 https://$server_name$request_uri;
+	listen 80;
+	server_name _;
+	rewrite ^ https://$host$request_uri? permanent;
     }
 
     server {
         listen 443 ssl;
-
         server_tokens off;
-                
         server_name kujon.mobi;
 
         location ^~ /static/ {
@@ -85,11 +82,8 @@ http {
 
     server {
         listen 443 ssl;
-
-        server_tokens off;
-
+	server_tokens off;
         server_name api.kujon.mobi;
-
         location / {
             # proxy_pass_header Server;
             proxy_set_header Host $http_host;
