--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -7,7 +7,7 @@ COOKIE_SECRET = 0NZD2Q9vTIyIRGBLKLZskNLWJr91sEtbn5AtW9uJo7E31
 AES_SECRET = W1FYSnlpTHWyR7k10bZa54ZlpTi2HEjxr86JsSCtz9g33
 
 PROJECT_TITLE = Kujon.mobi
-DEBUG = False
+DEBUG = True
 RELOAD = False
 COMPRESS_RESPONSE = True
 UNICODE = UTF-8
@@ -23,7 +23,7 @@ FACEBOOK_CLIENT_ID = 435328606663469
 FACEBOOK_CLIENT_SECRET = 3f2e953dbfebc98a2ea2fc888266f1c4
 
 [deployment]
-WEB_VERSION = v0.6
+WEB_VERSION = v0.0.1
 
 SITE_DOMAIN = https://kujon.mobi
 API_PORT = 8881
