2 methods for mobi authorization

--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -32,6 +32,7 @@ DEPLOY_API = http://localhost:8881
 WEB_PORT = 8888
 DEPLOY_WEB = http://localhost:8888
 CALLBACK_URL = http://localhost:8881/authentication/verify
+CALLBACK_MOBI_URL = http://localhost:8881/authentication/verifymobi
 LOGIN_URL = http://localhost:8888/#login
 
 [email]
