2 methods for mobi authorization

--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -32,7 +32,7 @@ DEPLOY_API = https://api.kujon.mobi
 WEB_PORT = 8888
 DEPLOY_WEB = https://kujon.mobi
 CALLBACK_URL = https://api.kujon.mobi/authentication/verify
-CALLBACK_URL = https://api.kujon.mobi/authentication/verifymobi
+CALLBACK_MOBI_URL = https://api.kujon.mobi/authentication/verifymobi
 LOGIN_URL = https://kujon.mobi/#login
 
 [email]
