--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -90,6 +90,8 @@ http {
             proxy_redirect off;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Scheme $scheme;
+            proxy_pass_header x-kujonmobiemail;
+            proxy_pass_header x-kujonmobitoken;
             proxy_pass https://api.kujon-api;
         }
     }
