--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -5,7 +5,7 @@ MONGODB_NAME = kujon-dev
 [application]
 COOKIE_SECRET = __TODO:_GENERATE_YOUR_OWN_RANDOM_VALUE_HERE__
 AES_SECRET = __TODO:_GENERATE_YOUR_OWN_RANDOM_VALUE_HERE__
-
+ENCRYPT_USOSES_KEYS = False
 PROJECT_TITLE = Kujon.mobi
 DEBUG = True
 RELOAD = False
