--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -5,7 +5,7 @@ MONGODB_NAME = kujon-prod
 [application]
 COOKIE_SECRET = 0NZD2Q9vTIyIRGBLKLZskNLWJr91sEtbn5AtW9uJo7E31
 AES_SECRET = W1FYSnlpTHWyR7k10bZa54ZlpTi2HEjxr86JsSCtz9g33
-
+ENCRYPT_USOSES_KEYS = False
 PROJECT_TITLE = Kujon.mobi
 DEBUG = True
 RELOAD = False
