--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -23,7 +23,7 @@ FACEBOOK_CLIENT_ID = 442437425952587
 FACEBOOK_CLIENT_SECRET = d380d5ecac943a54831ebefec22a86d9
 
 [deployment]
-WEB_VERSION = v0.7.1
+WEB_VERSION = v0.7.2
 
 SITE_DOMAIN = http://localhost
 API_PORT = 8881
@@ -34,6 +34,9 @@ DEPLOY_WEB = http://localhost:8888
 CALLBACK_URL = http://localhost:8881/authentication/verify
 CALLBACK_MOBI_URL = http://localhost:8881/authentication/verifymobi
 LOGIN_URL = http://localhost:8888/#login
+
+EVENT_PORT = 8882
+DEPLOY_EVENT =  http://localhost:8882
 
 [email]
 SMTP_HOST = localhost
