--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -23,7 +23,7 @@ FACEBOOK_CLIENT_ID = 435328606663469
 FACEBOOK_CLIENT_SECRET = 3f2e953dbfebc98a2ea2fc888266f1c4
 
 [deployment]
-WEB_VERSION = v0.7.1
+WEB_VERSION = v0.7.2
 
 SITE_DOMAIN = https://kujon.mobi
 API_PORT = 8881
@@ -34,6 +34,9 @@ DEPLOY_WEB = https://kujon.mobi
 CALLBACK_URL = https://api.kujon.mobi/authentication/verify
 CALLBACK_MOBI_URL = https://api.kujon.mobi/authentication/verifymobi
 LOGIN_URL = https://kujon.mobi/#login
+
+EVENT_PORT = 8882
+DEPLOY_EVENT =  https://event.kujon.mobi
 
 [email]
 SMTP_HOST = localhost
