--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -95,4 +95,20 @@ http {
             proxy_pass https://api.kujon-api;
         }
     }
+
+    server {
+        listen 443 ssl;
+        server_tokens off;
+        server_name event.kujon.mobi;
+
+        location / {
+            # proxy_pass_header Server;
+            proxy_set_header Host $http_host;
+            proxy_redirect off;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Scheme $scheme;
+            proxy_pass_header X-Hub-Signature;
+            proxy_pass https://event.kujon-api;
+        }
+    }
 }
