subscribe with crawler

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -21,6 +21,10 @@ http {
         server 127.0.0.1:8001;
     }
 
+    upstream kujon-event {
+        server 127.0.0.1:8004;
+    }
+
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
@@ -108,7 +112,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Scheme $scheme;
             proxy_pass_header X-Hub-Signature;
-            proxy_pass https://event.kujon-api;
+            proxy_pass https://kujon-event;
         }
     }
 }
