queue notificator sender

--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -14,7 +14,7 @@ UNICODE = UTF-8
 
 [proxy]
 PROXY_URL =
-PROXY_PORT = 
+PROXY_PORT =
 
 [social]
 GOOGLE_CLIENT_ID = 915486095176-jpodd1tterj5o4vtgoh18o4hokl5k55a.apps.googleusercontent.com
@@ -51,3 +51,7 @@ SSL_KEY =
 
 [administration]
 LOG_DIR =
+
+[notification]
+APPLICATION_ID = 50e558f1-b575-4554-9517-d1ea7b143a03
+URL = 'https://onesignal.com/api/v1/notifications'
