--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -51,3 +51,7 @@ SSL_KEY = /etc/ssl/kujon.mobi.key
 
 [administration]
 LOG_DIR = /home/appuser/kujon.mobi/log/
+
+[notification]
+APPLICATION_ID = 50e558f1-b575-4554-9517-d1ea7b143a03
+URL = 'https://onesignal.com/api/v1/notifications'
