--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -54,4 +54,4 @@ LOG_DIR =
 
 [notification]
 APPLICATION_ID = 50e558f1-b575-4554-9517-d1ea7b143a03
-URL = 'https://onesignal.com/api/v1/notifications'
+URL = https://onesignal.com/api/v1/notifications
