--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -36,7 +36,7 @@ CALLBACK_MOBI_URL = https://api.kujon.mobi/authentication/verifymobi
 LOGIN_URL = https://kujon.mobi/#login
 
 EVENT_PORT = 8882
-DEPLOY_EVENT =  https://event.kujon.mobi/verify
+DEPLOY_EVENT =  https://event.kujon.mobi/
 
 [email]
 SMTP_HOST = localhost
