--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -36,7 +36,7 @@ CALLBACK_MOBI_URL = http://localhost:8881/authentication/verifymobi
 LOGIN_URL = http://localhost:8888/#login
 
 EVENT_PORT = 8882
-DEPLOY_EVENT =  http://localhost:8882/verify
+DEPLOY_EVENT =  http://localhost:8882/
 
 [email]
 SMTP_HOST = localhost
