--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -96,6 +96,7 @@ http {
             proxy_set_header X-Scheme $scheme;
             proxy_pass_header x-kujonmobiemail;
             proxy_pass_header x-kujonmobitoken;
+            proxy_pass_header x-kujonrefresh;
             proxy_pass https://api.kujon-api;
         }
     }
