--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -23,7 +23,7 @@ FACEBOOK_CLIENT_ID = 442437425952587
 FACEBOOK_CLIENT_SECRET = d380d5ecac943a54831ebefec22a86d9
 
 [deployment]
-WEB_VERSION = v0.7.16
+WEB_VERSION = v0.7.17
 
 SITE_DOMAIN = http://localhost
 API_PORT = 8881
@@ -36,7 +36,7 @@ CALLBACK_MOBI_URL = http://localhost:8881/authentication/verifymobi
 LOGIN_URL = http://localhost:8888/#login
 
 EVENT_PORT = 8882
-DEPLOY_EVENT =  http://localhost:8882/
+DEPLOY_EVENT =  https://event.kujon.mobi
 
 [email]
 SMTP_HOST = localhost
