--- a/config/kujonmobi.conf
+++ b/config/kujonmobi.conf
@@ -1,32 +1,18 @@
-[program:kujon-api-8000]
+[program:kujon-api]
 command=python /home/appuser/kujon.mobi/current/api/api.py --port=8000
 user=appuser
 environment=HOME="/home/appuser/kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/kujon.mobi/current
 stderr_logfile = /home/appuser/kujon.mobi/log/api-stderr.log
 stdout_logfile = /home/appuser/kujon.mobi/log/api-stdout.log
 
-[program:kujon-api-8001]
-command=python /home/appuser/kujon.mobi/current/api/api.py --port=8001
-user=appuser
-environment=HOME="/home/appuser/kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/kujon.mobi/current
-stderr_logfile = /home/appuser/kujon.mobi/log/api-stderr.log
-stdout_logfile = /home/appuser/kujon.mobi/log/api-stdout.log
-
-[program:kujon-web-8002]
+[program:kujon-web]
 command=python /home/appuser/kujon.mobi/current/web/web.py --port=8002
 user=appuser
 environment=HOME="/home/appuser/kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/kujon.mobi/current
 stderr_logfile = /home/appuser/kujon.mobi/log/web-stderr.log
 stdout_logfile = /home/appuser/kujon.mobi/log/web-stdout.log
 
-[program:kujon-web-8003]
-command=python /home/appuser/kujon.mobi/current/web/web.py --port=8003
-user=appuser
-environment=HOME="/home/appuser/kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/kujon.mobi/current
-stderr_logfile = /home/appuser/kujon.mobi/log/web-stderr.log
-stdout_logfile = /home/appuser/kujon.mobi/log/web-stdout.log
-
-[program:kujon-event-8004]
+[program:kujon-event]
 command=python /home/appuser/kujon.mobi/current/event/event.py --port=8004
 user=appuser
 environment=HOME="/home/appuser/kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/kujon.mobi/current
