--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -25,7 +25,7 @@ FACEBOOK_CLIENT_SECRET = d380d5ecac943a54831ebefec22a86d9
 [deployment]
 WEB_VERSION = v0.7.22
 
-SITE_DOMAIN = http://localhost
+SITE_DOMAIN = localhost
 API_PORT = 8881
 DEPLOY_API = http://localhost:8881
 
