--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -25,7 +25,7 @@ FACEBOOK_CLIENT_SECRET = 3f2e953dbfebc98a2ea2fc888266f1c4
 [deployment]
 WEB_VERSION = v0.7.22
 
-SITE_DOMAIN = https://kujon.mobi
+SITE_DOMAIN = kujon.mobi
 API_PORT = 8881
 DEPLOY_API = https://api.kujon.mobi
 
