https://github.com/kujonmobi/kujon-server/issues/259

--- a/config/kujonmobi.conf
+++ b/config/kujonmobi.conf
@@ -19,13 +19,6 @@ environment=HOME="/home/appuser/kujon.mobi",USER="appuser",PYTHONPATH=/home/appu
 stderr_logfile = /home/appuser/kujon.mobi/log/event-stderr.log
 stdout_logfile = /home/appuser/kujon.mobi/log/event-stdout.log
 
-[program:kujon-scheduler]
-command=python /home/appuser/kujon.mobi/current/scheduler/scheduler.py
-user=appuser
-environment=HOME="/home/appuser/kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/kujon.mobi/current
-stderr_logfile = /home/appuser/kujon.mobi/log/scheduler-stderr.log
-stdout_logfile = /home/appuser/kujon.mobi/log/scheduler-stdout.log
-
 [program:kujon-crawler]
 command=python /home/appuser/kujon.mobi/current/crawler/crawler.py
 user=appuser
@@ -40,9 +33,9 @@ environment=HOME="/home/appuser/kujon.mobi",USER="appuser",PYTHONPATH=/home/appu
 stderr_logfile = /home/appuser/kujon.mobi/log/emailer-stderr.log
 stdout_logfile = /home/appuser/kujon.mobi/log/emailer-stdout.log
 
-[program:kujon-notificator]
-command=python /home/appuser/kujon.mobi/current/crawler/notificator.py
-user=appuser
-environment=HOME="/home/appuser/kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/kujon.mobi/current
-stderr_logfile = /home/appuser/kujon.mobi/log/notificator-stderr.log
-stdout_logfile = /home/appuser/kujon.mobi/log/notificator-stdout.log
+# [program:kujon-notificator]
+# command=python /home/appuser/kujon.mobi/current/crawler/notificator.py
+# user=appuser
+# environment=HOME="/home/appuser/kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/kujon.mobi/current
+# stderr_logfile = /home/appuser/kujon.mobi/log/notificator-stderr.log
+# stdout_logfile = /home/appuser/kujon.mobi/log/notificator-stdout.log
