--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -13,8 +13,8 @@ COMPRESS_RESPONSE = True
 UNICODE = UTF-8
 
 [proxy]
-PROXY_URL = web-proxy.houston.hp.com
-PROXY_PORT = 8080
+PROXY_URL =
+PROXY_PORT =
 
 [social]
 GOOGLE_CLIENT_ID = 896765768628-b1tut5g6hjin7iin6hn4qo8lt3b6ihlt.apps.googleusercontent.com
@@ -23,7 +23,7 @@ FACEBOOK_CLIENT_ID = 442437425952587
 FACEBOOK_CLIENT_SECRET = d380d5ecac943a54831ebefec22a86d9
 
 [deployment]
-WEB_VERSION = v0.7.25
+WEB_VERSION = v0.7.26
 
 SITE_DOMAIN = localhost
 API_PORT = 8881
