rename api to server due to import conflicts

--- a/config/kujonmobi.conf
+++ b/config/kujonmobi.conf
@@ -1,5 +1,5 @@
 [program:kujon-api]
-command=python /home/appuser/kujon.mobi/current/api/api.py --port=8000
+command=python /home/appuser/kujon.mobi/current/api/server.py --port=8000
 user=appuser
 environment=HOME="/home/appuser/kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/kujon.mobi/current
 stderr_logfile = /home/appuser/kujon.mobi/log/api-stderr.log
