--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -37,6 +37,7 @@ LOGIN_URL = http://localhost:8888/login
 
 EVENT_PORT = 8882
 DEPLOY_EVENT =  https://event.kujon.mobi
+LOG_LEVEL = DEBUG
 
 [email]
 SMTP_HOST = localhost
