--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -37,6 +37,7 @@ LOGIN_URL = https://kujon.mobi/login
 
 EVENT_PORT = 8882
 DEPLOY_EVENT =  https://event.kujon.mobi
+LOG_LEVEL = INFO
 
 [email]
 SMTP_HOST = localhost
