--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -13,8 +13,8 @@ COMPRESS_RESPONSE = True
 UNICODE = UTF-8
 
 [proxy]
-PROXY_URL =
-PROXY_PORT =
+PROXY_URL = web-proxy.houston.hp.com
+PROXY_PORT = 8080
 
 [social]
 GOOGLE_CLIENT_ID = 896765768628-b1tut5g6hjin7iin6hn4qo8lt3b6ihlt.apps.googleusercontent.com
@@ -55,4 +55,4 @@ LOG_DIR =
 
 [notification]
 APPLICATION_ID = 50e558f1-b575-4554-9517-d1ea7b143a03
-URL = https://onesignal.com/api/v1/notifications
+AUTHORIZATION = 'Basic M2Q0NmNkNDUtOTFiMy00OTA2LTlkZGMtNWVhZDFjNGM4ODcw'
