--- a/config/kujonmobi.conf
+++ b/config/kujonmobi.conf
@@ -6,7 +6,7 @@ stderr_logfile = /home/appuser/kujon.mobi/log/api-stderr.log
 stdout_logfile = /home/appuser/kujon.mobi/log/api-stdout.log
 
 [program:kujon-web]
-command=python /home/appuser/kujon.mobi/current/web/web.py --port=8002
+command=python /home/appuser/kujon.mobi/current/web/server.py --port=8002
 user=appuser
 environment=HOME="/home/appuser/kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/kujon.mobi/current
 stderr_logfile = /home/appuser/kujon.mobi/log/web-stderr.log
