prod.kujon.mobi

--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -51,7 +51,7 @@ SSL_CERT = /etc/ssl/kujon.mobi.cert
 SSL_KEY = /etc/ssl/kujon.mobi.key
 
 [administration]
-LOG_DIR = /home/appuser/kujon.mobi/log/
+LOG_DIR = /home/appuser/prod.kujon.mobi/log/
 
 [notification]
 APPLICATION_ID = 50e558f1-b575-4554-9517-d1ea7b143a03
