--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -4,7 +4,7 @@ MONGODB_NAME = kujon-dev
 
 [application]
 COOKIE_SECRET = __TODO:_GENERATE_YOUR_OWN_RANDOM_VALUE_HERE__
-AES_SECRET = __TODO:_GENERATE_YOUR_OWN_RANDOM_VALUE_HERE__
+AES_SECRET = 9AjSlj3TelxMc2sMrvhJls0r8QYlEZYzu5S-9pIHHlY=
 ENCRYPT_USOSES_KEYS = False
 PROJECT_TITLE = Kujon.mobi
 DEBUG = True
@@ -50,6 +50,7 @@ SSL_KEY =
 
 [administration]
 LOG_DIR =
+DEVELOPMENT = True
 
 [notification]
 APPLICATION_ID = f01a20f9-bbe7-4c89-a017-bf8930c61cf4
