--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -50,6 +50,7 @@ SSL_KEY = /etc/ssl/kujon.mobi.key
 
 [administration]
 LOG_DIR = /home/appuser/prod.kujon.mobi/log/
+DEVELOPMENT = False
 
 [notification]
 APPLICATION_ID = f01a20f9-bbe7-4c89-a017-bf8930c61cf4
