--- a/config/settings-demo.conf
+++ b/config/settings-demo.conf
@@ -4,7 +4,7 @@ MONGODB_NAME = kujon-demo
 
 [application]
 COOKIE_SECRET = 0NZD2Q9vTIyIRGBLKLZskNLWJr91sEtbn5AtW9uJo7E31
-AES_SECRET = W1FYSnlpTHWyR7k10bZa54ZlpTi2HEjxr86JsSCtz9g33
+AES_SECRET = gW2PBkhQmcyepU85ELPu456TwXgWpPskg2HaMaqXUTM=
 ENCRYPT_USOSES_KEYS = False
 PROJECT_TITLE = Kujon.mobi
 DEBUG = False
@@ -50,6 +50,7 @@ SSL_KEY = /etc/ssl/kujon.mobi.key
 
 [administration]
 LOG_DIR = /home/appuser/prod.kujon.mobi/log/
+DEVELOPMENT = False
 
 [notification]
 APPLICATION_ID = f01a20f9-bbe7-4c89-a017-bf8930c61cf4
