--- a/config/kujonmobi-prod.conf
+++ b/config/kujonmobi-prod.conf
@@ -1,3 +1,6 @@
+# [group:production]
+# programs=kujon-prod-api,kujon-prod-web,kujon-prod-event,kujon-prod-crawler,kujon-prod-emailer
+
 [program:kujon-prod-api]
 command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/api/server.py --environment=production
 user=appuser
@@ -20,7 +23,7 @@ stderr_logfile = /home/appuser/prod.kujon.mobi/log/event-stderr.log
 stdout_logfile = /home/appuser/prod.kujon.mobi/log/event-stdout.log
 
 [program:kujon-prod-crawler]
-command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/crawler/crawler.py --environment=production
+command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/crawler/usos_crawler.py --environment=production
 user=appuser
 environment=HOME="/home/appuser/prod.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/prod.kujon.mobi/current
 stderr_logfile = /home/appuser/prod.kujon.mobi/log/crawler-stderr.log
@@ -35,7 +38,8 @@ stdout_logfile = /home/appuser/prod.kujon.mobi/log/emailer-stdout.log
 
 
 ########## DEMO ###########
-
+# [group:demo]
+# programs=kujon-demo-api,kujon-demo-web,kujon-demo-event,kujon-demo-crawler,kujon-demo-emailer
 
 [program:kujon-demo-api]
 command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/api/server.py --environment=demo
@@ -59,7 +63,7 @@ stderr_logfile = /home/appuser/demo.kujon.mobi/log/event-stderr.log
 stdout_logfile = /home/appuser/demo.kujon.mobi/log/event-stdout.log
 
 [program:kujon-demo-crawler]
-command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/crawler/crawler.py --environment=demo
+command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/crawler/usos_crawler.py --environment=demo
 user=appuser
 environment=HOME="/home/appuser/demo.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/demo.kujon.mobi/current
 stderr_logfile = /home/appuser/demo.kujon.mobi/log/crawler-stderr.log
