--- a/config/kujonmobi-prod.conf
+++ b/config/kujonmobi-prod.conf
@@ -5,36 +5,46 @@
 command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/api/server.py --environment=production
 user=appuser
 environment=HOME="/home/appuser/prod.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/prod.kujon.mobi/current
-stderr_logfile = /home/appuser/prod.kujon.mobi/log/api-stderr.log
-stdout_logfile = /home/appuser/prod.kujon.mobi/log/api-stdout.log
+stderr_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
 
 [program:kujon-prod-web]
 command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/web/server.py --environment=production
 user=appuser
 environment=HOME="/home/appuser/prod.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/prod.kujon.mobi/current
-stderr_logfile = /home/appuser/prod.kujon.mobi/log/web-stderr.log
-stdout_logfile = /home/appuser/prod.kujon.mobi/log/web-stdout.log
+stderr_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
 
 [program:kujon-prod-event]
 command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/event/server.py --environment=production
 user=appuser
 environment=HOME="/home/appuser/prod.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/prod.kujon.mobi/current
-stderr_logfile = /home/appuser/prod.kujon.mobi/log/event-stderr.log
-stdout_logfile = /home/appuser/prod.kujon.mobi/log/event-stdout.log
+stderr_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
 
 [program:kujon-prod-crawler]
 command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/crawler/usos_crawler.py --environment=production
 user=appuser
 environment=HOME="/home/appuser/prod.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/prod.kujon.mobi/current
-stderr_logfile = /home/appuser/prod.kujon.mobi/log/crawler-stderr.log
-stdout_logfile = /home/appuser/prod.kujon.mobi/log/crawler-stdout.log
+stderr_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
 
 [program:kujon-prod-emailer]
 command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/crawler/emailer.py --environment=production
 user=appuser
 environment=HOME="/home/appuser/prod.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/prod.kujon.mobi/current
-stderr_logfile = /home/appuser/prod.kujon.mobi/log/emailer-stderr.log
-stdout_logfile = /home/appuser/prod.kujon.mobi/log/emailer-stdout.log
+stderr_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
 
 
 ########## DEMO ###########
@@ -45,28 +55,35 @@ stdout_logfile = /home/appuser/prod.kujon.mobi/log/emailer-stdout.log
 command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/api/server.py --environment=demo
 user=appuser
 environment=HOME="/home/appuser/demo.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/demo.kujon.mobi/current
-stderr_logfile = /home/appuser/demo.kujon.mobi/log/api-stderr.log
-stdout_logfile = /home/appuser/demo.kujon.mobi/log/api-stdout.log
+stderr_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
 
 [program:kujon-demo-web]
 command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/web/server.py --environment=demo
 user=appuser
 environment=HOME="/home/appuser/demo.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/demo.kujon.mobi/current
-stderr_logfile = /home/appuser/demo.kujon.mobi/log/web-stderr.log
-stdout_logfile = /home/appuser/demo.kujon.mobi/log/web-stdout.log
+stderr_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
 
 [program:kujon-demo-event]
 command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/event/server.py --environment=demo
 user=appuser
 environment=HOME="/home/appuser/demo.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/demo.kujon.mobi/current
-stderr_logfile = /home/appuser/demo.kujon.mobi/log/event-stderr.log
-stdout_logfile = /home/appuser/demo.kujon.mobi/log/event-stdout.log
+stderr_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
 
 [program:kujon-demo-crawler]
 command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/crawler/usos_crawler.py --environment=demo
 user=appuser
 environment=HOME="/home/appuser/demo.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/demo.kujon.mobi/current
-stderr_logfile = /home/appuser/demo.kujon.mobi/log/crawler-stderr.log
-stdout_logfile = /home/appuser/demo.kujon.mobi/log/crawler-stdout.log
-
+stderr_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
 
