--- a/web/static/bower.json
+++ b/web/static/bower.json
@@ -32,6 +32,7 @@
     "datatables": "^1.10.12",
     "font-awesome": "fontawesome#^4.6.3",
     "respond": "^1.4.2",
-    "html5shiv": "^3.7.3"
+    "html5shiv": "^3.7.3",
+    "jquery.cookiebar": "^1.2.1"
   }
 }
