demo server configuration

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -7,23 +7,35 @@ events {
     use epoll;
 }
 
+
 http {
     charset utf-8;
 
     # Enumerate all the Tornado servers here
     upstream kujon-web {
         server 127.0.0.1:8002;
-        server 127.0.0.1:8003;
     }
 
     upstream kujon-api {
         server 127.0.0.1:8000;
-        server 127.0.0.1:8001;
     }
 
     upstream kujon-event {
         server 127.0.0.1:8004;
     }
+
+    upstream kujon-web-demo {
+        server 127.0.0.1:9002;
+    }
+
+    upstream kujon-api-demo {
+        server 127.0.0.1:9000;
+    }
+
+    upstream kujon-event-demo {
+        server 127.0.0.1:9004;
+    }
+
 
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
@@ -52,22 +64,28 @@ http {
     ssl_session_timeout 10m;
     ssl_certificate      /etc/ssl/kujon.mobi.withroot.cert;
     ssl_certificate_key  /etc/ssl/kujon.mobi.key;
-        ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
     server {
-	    listen 80;
-	    server_name _;
-	    rewrite ^ https://$host$request_uri? permanent;
+	listen 80;
+	server_name _;
+	rewrite ^ https://$host$request_uri? permanent;
     }
+
+    ######################## PRODUCTION ########################
 
     server {
         listen 443 ssl;
         server_tokens off;
         server_name kujon.mobi;
 
+        access_log /var/log/nginx/access-kujon-prod.log;
+        error_log /var/log/nginx/error-kujon-prod.log;
+
+
         location ^~ /static/ {
-            root /home/appuser/kujon.mobi/current/web/;
+            root /home/appuser/prod.kujon.mobi/current/web/;
             if ($query_string) {
                 expires max;
             }
@@ -80,24 +98,28 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Scheme $scheme;
             proxy_pass https://kujon-web;
+            proxy_pass_header x-correlation-id;
         }
     }
 
     server {
         listen 443 ssl;
-        server_tokens off;
+	server_tokens off;
         server_name api.kujon.mobi;
+
+        access_log /var/log/nginx/access-kujon-prod.log;
+        error_log /var/log/nginx/error-kujon-prod.log;
 
         location / {
             # proxy_pass_header Server;
-            proxy_set_header Host $http_host;
             proxy_redirect off;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Scheme $scheme;
             proxy_pass_header x-kujonmobiemail;
             proxy_pass_header x-kujonmobitoken;
             proxy_pass_header x-kujonrefresh;
-            proxy_pass https://api.kujon-api;
+            proxy_pass https://kujon-api;
+            proxy_pass_header x-correlation-id;
         }
     }
 
@@ -105,6 +127,9 @@ http {
         listen 443 ssl;
         server_tokens off;
         server_name event.kujon.mobi;
+
+        access_log /var/log/nginx/access-kujon-prod.log;
+        error_log /var/log/nginx/error-kujon-prod.log;
 
         location / {
             # proxy_pass_header Server;
@@ -116,4 +141,73 @@ http {
             proxy_pass https://kujon-event;
         }
     }
+
+    ######################## DEMO ########################
+
+    server {
+        listen 443 ssl;
+        server_tokens off;
+        server_name demo.kujon.mobi;
+
+        access_log /var/log/nginx/access-kujon-demo.log;
+        error_log /var/log/nginx/error-kujon-demo.log;
+
+        location ^~ /static/ {
+            root /home/appuser/demo.kujon.mobi/current/web/;
+            if ($query_string) {
+                expires max;
+            }
+        }
+
+        location / {
+            # proxy_pass_header Server;
+            proxy_set_header Host $http_host;
+            proxy_redirect off;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Scheme $scheme;
+            proxy_pass https://kujon-web-demo;
+            proxy_pass_header x-correlation-id;
+        }
+    }
+ 
+    server {
+        listen 443 ssl;
+        server_tokens off;
+        server_name api-demo.kujon.mobi;
+        
+        access_log /var/log/nginx/access-kujon-demo.log;
+        error_log /var/log/nginx/error-kujon-demo.log; 
+
+        location / {
+            # proxy_pass_header Server;
+            proxy_redirect off;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Scheme $scheme;
+            proxy_pass_header x-kujonmobiemail;
+            proxy_pass_header x-kujonmobitoken;
+            proxy_pass_header x-kujonrefresh;
+            proxy_pass https://kujon-api-demo;
+            proxy_pass_header x-correlation-id;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_tokens off;
+        server_name event-demo.kujon.mobi;
+
+        access_log /var/log/nginx/access-kujon-demo.log;
+        error_log /var/log/nginx/error-kujon-demo.log;
+
+        location / {
+            # proxy_pass_header Server;
+            proxy_set_header Host $http_host;
+            proxy_redirect off;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Scheme $scheme;
+            proxy_pass_header X-Hub-Signature;
+            proxy_pass https://kujon-event-demo;
+        }
+    }
+
 }
