--- a/config/settings-demo.conf
+++ b/config/settings-demo.conf
@@ -27,7 +27,7 @@ WEB_VERSION = v0.9.9
 
 SITE_DOMAIN = kujon.mobi
 API_PORT = 9000
-DEPLOY_API = https://api.kujon.mobi
+DEPLOY_API = https://api-demo.kujon.mobi
 
 WEB_PORT = 9002
 DEPLOY_WEB = https://demo.kujon.mobi
