--- a/config/settings-demo.conf
+++ b/config/settings-demo.conf
@@ -25,7 +25,7 @@ FACEBOOK_CLIENT_SECRET = 3f2e953dbfebc98a2ea2fc888266f1c4
 [deployment]
 WEB_VERSION = v0.9.9
 
-SITE_DOMAIN = kujon.mobi
+SITE_DOMAIN = demo.kujon.mobi
 API_PORT = 9000
 DEPLOY_API = https://api-demo.kujon.mobi
 
