--- a/config/settings-demo.conf
+++ b/config/settings-demo.conf
@@ -35,7 +35,7 @@ CALLBACK_URL = https://api-demo.kujon.mobi/authentication/verify
 
 EVENT_PORT = 9004
 DEPLOY_EVENT =  https://event-demo.kujon.mobi
-LOG_LEVEL = INFO
+LOG_LEVEL = DEBUG
 
 [email]
 SMTP_HOST = localhost
