extract cookies names to settings - environment separation

--- a/config/settings-demo.conf
+++ b/config/settings-demo.conf
@@ -24,6 +24,8 @@ FACEBOOK_CLIENT_SECRET = 3f2e953dbfebc98a2ea2fc888266f1c4
 
 [deployment]
 WEB_VERSION = v0.9.9
+KUJON_SECURE_COOKIE = KUJON_SECURE_COOKIE_DEMO
+KUJON_MOBI_REGISTER = KUJON_MOBI_REGISTER_DEMO
 
 SITE_DOMAIN = demo.kujon.mobi
 API_PORT = 9000
