--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -24,6 +24,8 @@ FACEBOOK_CLIENT_SECRET = d380d5ecac943a54831ebefec22a86d9
 
 [deployment]
 WEB_VERSION = v0.9.9
+KUJON_SECURE_COOKIE = KUJON_SECURE_COOKIE_DEV
+KUJON_MOBI_REGISTER = KUJON_MOBI_REGISTER_DEV
 
 SITE_DOMAIN = localhost
 API_PORT = 8881
