--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -24,6 +24,8 @@ FACEBOOK_CLIENT_SECRET = 3f2e953dbfebc98a2ea2fc888266f1c4
 
 [deployment]
 WEB_VERSION = v0.9.9
+KUJON_SECURE_COOKIE = KUJON_SECURE_COOKIE
+KUJON_MOBI_REGISTER = KUJON_MOBI_REGISTER
 
 SITE_DOMAIN = kujon.mobi
 API_PORT = 8000
