show PROJECT_TITLE on WWW intro page

--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -6,7 +6,7 @@ MONGODB_NAME = kujon-dev
 COOKIE_SECRET = __TODO:_GENERATE_YOUR_OWN_RANDOM_VALUE_HERE__
 AES_SECRET = 9AjSlj3TelxMc2sMrvhJls0r8QYlEZYzu5S-9pIHHlY=
 ENCRYPT_USOSES_KEYS = False
-PROJECT_TITLE = Kujon.mobi
+PROJECT_TITLE = Kujon.mobi.dev
 DEBUG = True
 RELOAD = False
 COMPRESS_RESPONSE = True
