--- a/config/settings-tests.conf
+++ b/config/settings-tests.conf
@@ -13,8 +13,8 @@ COMPRESS_RESPONSE = True
 UNICODE = UTF-8
 
 [proxy]
-PROXY_URL =
-PROXY_PORT =
+PROXY_URL = proxy.bbn.hp.com
+PROXY_PORT = 8080
 
 
 [social]
@@ -30,10 +30,10 @@ KUJON_MOBI_REGISTER = KUJON_MOBI_REGISTER_TESTS
 
 SITE_DOMAIN = localhost
 API_PORT = 7881
-DEPLOY_API = http://localhost:8881
+DEPLOY_API = http://localhost:7881
 
 WEB_PORT = 7888
-DEPLOY_WEB = http://localhost:8888
+DEPLOY_WEB = http://localhost:7888
 CALLBACK_URL = http://localhost:8881/authentication/verify
 
 EVENT_PORT = 7882
