--- a/config/settings-tests.conf
+++ b/config/settings-tests.conf
@@ -13,8 +13,8 @@ COMPRESS_RESPONSE = True
 UNICODE = UTF-8
 
 [proxy]
-PROXY_URL = proxy.bbn.hp.com
-PROXY_PORT = 8080
+PROXY_URL =
+PROXY_PORT =
 
 
 [social]
@@ -24,7 +24,7 @@ FACEBOOK_CLIENT_ID = 442437425952587
 FACEBOOK_CLIENT_SECRET = d380d5ecac943a54831ebefec22a86d9
 
 [deployment]
-WEB_VERSION = v0.9.9
+WEB_VERSION = v0.9.10
 KUJON_SECURE_COOKIE = KUJON_SECURE_COOKIE_TESTS
 KUJON_MOBI_REGISTER = KUJON_MOBI_REGISTER_TESTS
 
