--- a/config/settings-demo.conf
+++ b/config/settings-demo.conf
@@ -3,11 +3,11 @@ MONGODB_URI = mongodb://kujdemo:jsH28s3284sh@localhost/kujon-demo
 MONGODB_NAME = kujon-demo
 
 [application]
-COOKIE_SECRET = 0NZD2Q9vTIyIRGBLKLZskNLWJr91sEtbn5AtW9uJo7E31
+COOKIE_SECRET = pUuXrv71RNCfYwnyVgMmJTiv/Kr9mU3sr2QaY7p9xTQ=
 AES_SECRET = gW2PBkhQmcyepU85ELPu456TwXgWpPskg2HaMaqXUTM=
 ENCRYPT_USOSES_KEYS = False
 PROJECT_TITLE = Kujon.mobi.demo
-DEBUG = False
+DEBUG = True
 RELOAD = False
 COMPRESS_RESPONSE = True
 UNICODE = UTF-8
@@ -17,17 +17,18 @@ PROXY_URL =
 PROXY_PORT =
 
 [social]
-GOOGLE_CLIENT_ID = 81067113304404-ib77ifik6jg1m7lsm9sqraref32q8bfm.apps.googleusercontent.com
+GOOGLE_CLIENT_ID = 1067113304404-ib77ifik6jg1m7lsm9sqraref32q8bfm.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = nOS7Dx6vMKrnu_C0ehaf6hBg
 FACEBOOK_CLIENT_ID = 435328606663469
 FACEBOOK_CLIENT_SECRET = 3f2e953dbfebc98a2ea2fc888266f1c4
 
 [deployment]
 WEB_VERSION = v0.9.10
-KUJON_SECURE_COOKIE = KUJON_SECURE_COOKIE_DEMO
-KUJON_MOBI_REGISTER = KUJON_MOBI_REGISTER_DEMO
+KUJON_SECURE_COOKIE = KUJON_SECURE_COOKIE_DEM
+KUJON_MOBI_REGISTER = KUJON_MOBI_REGISTER_DEM
 
-SITE_DOMAIN = demo.kujon.mobi
+# site domain without subdomain - cookie problem in web deploument
+SITE_DOMAIN = kujon.mobi
 API_PORT = 9000
 DEPLOY_API = https://api-demo.kujon.mobi
 
