--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -3,7 +3,7 @@ MONGODB_URI = mongodb://localmongoinstance/kujon-dev
 MONGODB_NAME = kujon-dev
 
 [application]
-COOKIE_SECRET = __TODO:_GENERATE_YOUR_OWN_RANDOM_VALUE_HERE__
+COOKIE_SECRET = 4RudcvEQRXGrHpYBgWzU4WBEJdL7rkHbjd43UapzjHE=
 AES_SECRET = 9AjSlj3TelxMc2sMrvhJls0r8QYlEZYzu5S-9pIHHlY=
 ENCRYPT_USOSES_KEYS = False
 PROJECT_TITLE = Kujon.mobi.dev
